# ConstitutionBOT

./: .env.example  .gitignore  PLAN.md  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.github/workflows/: ci.yml
data/documents/processed/: saconstitution_web_eng.json
e2e/: example.spec.ts  features.spec.ts
src/constitutionbot/: __init__.py  config.py
src/constitutionbot/cli/: __init__.py  main.py
src/constitutionbot/core/: __init__.py  claude_client.py
src/constitutionbot/core/chat/: __init__.py  service.py
src/constitutionbot/core/constitution/: __init__.py  loader.py  models.py  retriever.py
src/constitutionbot/core/content/: __init__.py  formats.py  generator.py  templates.py  validators.py
src/constitutionbot/dashboard/: __init__.py  app.py  auth.py
src/constitutionbot/database/: __init__.py  database.py  models.py
src/constitutionbot/twitter/: __init__.py  bot.py  client.py
src/contentmanager/: __init__.py  config.py
src/contentmanager/cli/: __init__.py  main.py
src/contentmanager/core/: __init__.py  claude_client.py  encryption.py
src/contentmanager/dashboard/: __init__.py  app.py  auth.py  csrf.py
src/contentmanager/database/: __init__.py  database.py  models.py
src/contentmanager/twitter/: __init__.py  bot.py  client.py
tests/: __init__.py  conftest.py  test_ai_pattern_filter.py  test_api_integration.py  test_auth.py  test_config.py  test_csrf.py  test_documents.py  test_encryption.py  test_export.py  test_insight_analyzer.py  test_repositories.py  test_scenarios.py  test_synthesis.py
(+135 files in other folders)
